# Entity-Alignment-for-Art

./: LICENSE  README.md
WES/: README.md  artists-entitysearch.py  entitysearch.py  output-linked-artworks.csv  output_linked_artists.csv  titles_names.csv
p-art-link/: README.md  pyproject.toml
p-art-link/src/: GENRE_installation.ipynb  artists_entity_linking.py  artists_sentence_generation.py
results-validation/: Fleiss Kappa.ipynb  README.md  artist_script_validation.py  artwork_script_validation.py
